--- a/community/sbw/SBW/SBW_2017.html
+++ b/community/sbw/SBW/SBW_2017.html
@@ -62,73 +62,98 @@ sitemap: community/sbw
             <tr><td>Alvaro Sanz Saez De Jauregui, Univ. of Missouri</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Sanz-Saez_et_al.,_2017.pdf'>Identification and introgression of high WUE to improve soybean drought adaptation</a></td></tr>
             <tr><td>Patricio Grassini, Univ. of Nebraska</td><td>From plot to field: Technology extrapolation domains in agriculture</td></tr>
             <tr><td>Gary Stacey, Univ. of Missouri</td><td>Can biological nitrogen fixation research improve soybean yield?</td></tr>
-    <tr><td>10:05</td><td>10:20</td><td colspan='2'>Coffee Break</td></tr>
-    <tr><td>10:20</td><td>10:50</td><td>Krishna Jagadish, Kansas State Univ.</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Jagadish_et_al_Soybean_Breeders_meet_FINAL_MO.pdf'>Soybeans resilience to heat and drought stress during flowering and pod filling - current status, challenges and opportunities</a></td></tr>
-    <tr><td>10:50</td><td>11:20</td><td>Moldir Orazaly, Univ. of Arkansas</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Screening,_breeding,_and_mapping_for_flood_in_soybean.pdf'>Screening, mapping, and breeding for flood tolerance in soybean</a></td></tr>
-    <tr><td>11:20</td><td>11:50</td><td>Carl Bernacchi, Univ. of Illinois</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Bernacchi_Soybean_Breeders_Workshop_2017.pdf'>Understanding soybean responses to global changes: Impacts and adaptations</a></td></tr>
-    <tr><td>11:50</td><td>1:00</td><td colspan='2'>Lunch</td></tr>
-    <tr><td>1:00</td><td>1:05</td><td>Bo Zhang, Virginia Tech. Univ.</td><td>Introduction and Announcements</td></tr>
-    <tr><th colspan='4'>SESSION II:  Phenomics, Genomics, and Crop Management<br />Session Chair - Andrew Scaboo, Univ. of Missouri</th></tr>
-    <tr><td>1:05</td><td>1:35</td><td>Danny Singh, Iowa State Univ.</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Danny_Singh_2017_SBW_Feb_14_FINAL.pdf'>Phenomics tools</a></td></tr>
-    <tr><td>1:35</td><td>2:05</td><td>Montse Salmeron, Univ. of Kentucky</td><td>Analysis of the role of environment in soybean across MG cultivars: Observed and simulated data</td></tr>
-    <tr><td>2:05</td><td>2:35</td><td>Katy Rainey, Purdue Univ.</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Rainey_carbohydrate_sources.pdf'>Genetic Architecture of Phenomic-enabled Canopy Coverage in Soybean</a></td></tr>
-    <tr><td>2:35</td><td>3:05</td><td>Neil Yu, Monsanto Co.</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SBW_2017_NEIL_YU.pdf'>Using UAV to improve yield estimation and predict maturity in soybean breeding</a></td></tr>
-    <tr><td>3:05</td><td>3:20</td><td colspan='2'>Break</td></tr>
-    <tr><td>3:20</td><td>3:50</td><td>Istvan Rajcan, Univ. of Guelph</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Organic_soybean_breeding_SBW_2017.pdf'>Organic Soybean Breeding</a></td></tr>
-    <tr><td>3:50</td><td>4:20</td><td>Charles An, USDA-ARS</td><td>Functional genomics of soybean seeds and genetic diversity</td></tr>
-    <tr><td>4:20</td><td>4:50</td><td>Qijian Song, USDA-ARS</td><td>BARCSOYSNP6K Beadchip: A breeder’s tool for soybean genetic research</td></tr>
-    <tr><td>4:50</td><td>5:00</td><td>Bo Zhang, Virginia Tech. Univ.</td><td>Announcements and adjourn</td></tr>
-    <tr><td>5:30</td><td>6:30</td><td colspan='2'>Social Hour & Poster Session, Foyer & Versailles 2</td></tr>
-</tbody>
-</table>
+            <tr><td colspan='2'>Coffee Break</td></tr>
+            <tr><td>>Krishna Jagadish, Kansas State Univ.</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Jagadish_et_al_Soybean_Breeders_meet_FINAL_MO.pdf'>Soybeans resilience to heat and drought stress during flowering and pod filling - current status, challenges and opportunities</a></td></tr>
+            <tr><td>Moldir Orazaly, Univ. of Arkansas</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Screening,_breeding,_and_mapping_for_flood_in_soybean.pdf'>Screening, mapping, and breeding for flood tolerance in soybean</a></td></tr>
+            <tr><td>Carl Bernacchi, Univ. of Illinois</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Bernacchi_Soybean_Breeders_Workshop_2017.pdf'>Understanding soybean responses to global changes: Impacts and adaptations</a></td></tr>
+            <tr><td colspan='2'>Lunch</td></tr>
+            <tr><td>Bo Zhang, Virginia Tech. Univ.</td><td>Introduction and Announcements</td></tr>
+            <tr><th colspan='2'>SESSION II:  Phenomics, Genomics, and Crop Management | Chair: Andrew Scaboo, Univ. of Missouri</th></tr>
+            <tr><td>Danny Singh, Iowa State Univ.</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Danny_Singh_2017_SBW_Feb_14_FINAL.pdf'>Phenomics tools</a></td></tr>
+            <tr><td>Montse Salmeron, Univ. of Kentucky</td><td>Analysis of the role of environment in soybean across MG cultivars: Observed and simulated data</td></tr>
+            <tr><td>Katy Rainey, Purdue Univ.</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Rainey_carbohydrate_sources.pdf'>Genetic Architecture of Phenomic-enabled Canopy Coverage in Soybean</a></td></tr>
+            <tr><td>Neil Yu, Monsanto Co.</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SBW_2017_NEIL_YU.pdf'>Using UAV to improve yield estimation and predict maturity in soybean breeding</a></td></tr>
+            <tr><td colspan='2'>Break</td></tr>
+            <tr><td>Istvan Rajcan, Univ. of Guelph</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Organic_soybean_breeding_SBW_2017.pdf'>Organic Soybean Breeding</a></td></tr>
+            <tr><td>Charles An, USDA-ARS</td><td>Functional genomics of soybean seeds and genetic diversity</td></tr>
+            <tr><td>Qijian Song, USDA-ARS</td><td>BARCSOYSNP6K Beadchip: A breeder’s tool for soybean genetic research</td></tr>
+            <tr><td>Bo Zhang, Virginia Tech. Univ.</td><td>Announcements and adjourn</td></tr>
+            <tr><td colspan='2'>Social Hour & Poster Session</td></tr>
+        </body>
+    </table>
 </div>
 
-<h3>Wednesday February 15th, 2017 | Versailles 1 Room</h3>
-
+<h3>Wednesday February 15th, 2017</h3>
 <div class="uk-overflow-auto">
-<table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
-    <thead>
-        <tr>
-            <th class="uk-table-shrink">Start</th>
-            <th class="uk-table-shrink">End</th>
-            <th class="uk-table-expand">Speaker</th>
-            <th class="uk-table-expand">Topic</th>
-        </tr>
-    </thead>
-<body>
-    <tr><td>7:00</td><td>8:00</td><td colspan='2'>Continental Breakfast, Versailles Foyer</td></tr>
-    <tr><td>8:00</td><td>8:10</td><td>Andrew Scaboo, Univ. of Missouri<br />Evelyn Ortiz Perez, Dow AgroSciences</td><td>Announcements<br />Poster Winners Announced</td></tr>
-    <tr><td>8:10</td><td>8:25</td><td>Zenglu Li, Univ. of Georgia</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Soybean_Germplasm_Committee_Report-Zenglu_Li.pdf'>Germplasm Committee Report</a></td></tr>
-    <tr><td>8:25</td><td>8:40</td><td>Michelle Graham, USDA-ARS</td><td>SoyGEC Report</td></tr>
-    <tr><td>8:40</td><td>9:10</td><td>David Grant, USDA-ARS </td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SoyGenetComm_SBW_2017.pdf'>Soybean Genetics Committee Report</a> and <a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SoyBase_update_SBW_2017.pdf'>SoyBase.org update</a></td></tr>
-    <tr><td>9:10</td><td>9:30</td><td>From the Floor</td><td>Retirements and Announcements</td></tr>
-    <tr><td>9:30</td><td>10:00</td><td>Siddhi Bhusal, Univ. of Minnesota</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SBW_SJBhusal.pdf'>Evaluation and identification of soybean aphid resistance sources and mapping of soybean aphid resistance loci in early maturing soybean germplasm</a></td></tr>
-    <tr><td>10:00</td><td>10:30</td><td>Brian Diers, Univ. of Illinois</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Protein_talk_2017_SBW.pdf'>Protein and oil QTL and their associated impact on agronomic traits</a></td></tr>
-    <tr><td>10:30</td><td>10:35</td><td>Andrew Scaboo, Univ. of Missouri</td><td>Adjourn</td></tr>
-</body>
-</table>
+    <table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+        </thead>
+        <body>
+            <tr><td>Andrew Scaboo, Univ. of Missouri<br />Evelyn Ortiz Perez, Dow AgroSciences</td><td>Announcements & Poster Winners Announced</td></tr>
+            <tr><td>Zenglu Li, Univ. of Georgia</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Soybean_Germplasm_Committee_Report-Zenglu_Li.pdf'>Germplasm Committee Report</a></td></tr>
+            <tr><td>Michelle Graham, USDA-ARS</td><td>SoyGEC Report</td></tr>
+            <tr><td>David Grant, USDA-ARS </td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SoyGenetComm_SBW_2017.pdf'>Soybean Genetics Committee Report</a> and <a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SoyBase_update_SBW_2017.pdf'>SoyBase.org update</a></td></tr>
+            <tr><td>From the Floor</td><td>Retirements and Announcements</td></tr>
+            <tr><td>Siddhi Bhusal, Univ. of Minnesota</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SBW_SJBhusal.pdf'>Evaluation and identification of soybean aphid resistance sources and mapping of soybean aphid resistance loci in early maturing soybean germplasm</a></td></tr>
+            <tr><td>Brian Diers, Univ. of Illinois</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Protein_talk_2017_SBW.pdf'>Protein and oil QTL and their associated impact on agronomic traits</a></td></tr>
+            <tr><td>Andrew Scaboo, Univ. of Missouri</td><td>Adjourn</td></tr>
+        </body>
+    </table>
 </div>
 
 <h3>SPECIAL MEETINGS and WORKSHOPS</h3>
 
-<h3>Monday 02/13/2017</h3>
-<p>SoyBase Workshop, David Grant | 8:30 am - 10:00 am | Alpine II room</p>
-<p><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Soybean_Germplasm_Committee_Report-Zenglu_Li.pdf'>Soybean Germplasm Committee, Zenglu Li</a> | 8:00 am - 9:30 am | Alpine I room</p>
-<p>Soybean Genomics Executive Committee, Jennifer Jones | 10:00 am - 12:00 pm | Zermatt Room</p>
-<p>Technicians Workshop, Troy Cary | 1:00 pm - 5:00 pm | St. Moritz and Bern room </p>
-<p>Commercial Soybean Breeders’ Business Meeting, Evelyn Ortiz-Perez | 5:30 pm - 6:30 pm | Alpine I room</p>
-<p><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SoyGenetComm_SBW_2017.pdf'>Soybean Genetics Committee, David Grant</a> | 7:00 pm - 8:00 pm | Davos room </p>
-<p>Combining QT and Northern/Southern UT, Kelly Whiting | 7:00 pm - 8:00 pm | St. Moritz and Bern room</p>
-<p>Quality Traits, George Graef | 8:00 pm - 9:00 pm | St. Moritz and Bern room</p>
+<h4>Monday, February 13, 2017</h4>
+<div class="uk-overflow-auto">
+    <table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+        </thead>
+        <body>
+            <tr><td>David Grant</td><td>SoyBase Workshop</td></tr>
+            <tr><td>Zenglu Li</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Soybean_Germplasm_Committee_Report-Zenglu_Li.pdf'>Soybean Germplasm Committee</a></td></tr>
+            <tr><td>Jennifer Jones</td><td>Soybean Genomics Executive Committee</td></tr>
+            <tr><td>Troy Cary</td><td>Technicians Workshop</td></tr>
+            <tr><td>Evelyn Ortiz-Perez</td><td>Commercial Soybean Breeders’ Business Meeting</td></tr>
+            <tr><td>David Grant</td><td> <a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SoyGenetComm_SBW_2017.pdf'>Soybean Genetics Committee</a></td></tr>
+            <tr><td>Kelly Whiting</td><td>Combining QT and Northern/Southern UT</td></tr>
+            <tr><td>George Graef</td><td>Quality Traits</td></tr>
+        </body>
+    </table>
+</div>
 
-<h3>Tuesday 02/14/2017</h3>
-<p>Continental Breakfast | 6:30 am - 8:00 am | Versailles Foyer</p>
-<p>Technicians Workshop, Troy Cary | 8:00 am - 12:00 pm | St. Moritz and Bern room</p>
-<p>Social Hour | 5:30 pm - 6:30 pm | Versailles Foyer</p>
-<p>Poster Session | 5:30 pm - 6:30 pm | Versailles 2 room</p>
-<p>Uniform Regional Testing: South, Anne Gillen | 7:00 pm - 8:00 pm | Davos room</p>
-<p>Uniform Regional Testing: North, Gary Nowling | 7:00 pm - 7:30 pm | Alpine II room</p>
-<p>SCN Regional Testing, Troy Cary | 7:30 pm - 8:00 pm | Alpine II room</p>
+
+
+
+
+
+
+<h4>Tuesday, February, 14, 2017</h4>
+<div class="uk-overflow-auto">
+    <table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+        </thead>
+        <body>
+            <tr><td>Troy Cary</td><td>Technicians Workshop</td></tr>
+            <tr><td>Anne Gillen</td><td>South Uniform Regional Testing</td></tr>
+            <tr><td>Gary Nowling</td><td>North Uniform Regional Testing</td></tr>
+            <tr><td>Troy Cary</td><td>SCN Regional Testing</td></tr> 
+        </body>
+    </table>
+</div>
+
+
 
 <h3>Wednesday 02/15/2017</h3>
 <p>Continental Breakfast | 6:45 am - 8:00 am | Versailles Foyer</p>
