--- a/community/sbw/SBW/SBW_2016.html
+++ b/community/sbw/SBW/SBW_2016.html
@@ -13,7 +13,9 @@ sitemap: community/sbw
 	<strong>Clint Mapel</strong>, Dupont Pioneer;
 	<strong>Andrew Scaboo</strong>, Univ. of Missouri;
 	<strong>Aaron Lorenz</strong>, Univ. of Minnesota;
-	<strong>John Rupe</strong>, Univ. of Arkansas	
+	<strong>John Rupe</strong>, Univ. of Arkansas
+	<br >
+	<a href="https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2016/2016_SBW_Agenda_for_SoyBase.pdf">View the published 2017 SBW Agenda</a>
 </p>
 
 
