--- a/community/sbw/SBW/SBW_2017.html
+++ b/community/sbw/SBW/SBW_2017.html
@@ -122,7 +122,7 @@ sitemap: community/sbw
             <tr><td>Jennifer Jones</td><td>Soybean Genomics Executive Committee</td></tr>
             <tr><td>Troy Cary</td><td>Technicians Workshop</td></tr>
             <tr><td>Evelyn Ortiz-Perez</td><td>Commercial Soybean Breeders’ Business Meeting</td></tr>
-            <tr><td>David Grant</td><td> <a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SoyGenetComm_SBW_2017.pdf'>Soybean Genetics Committee</a></td></tr>
+            <tr><td>David Grant</td><td> <a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/SoyGenetComm_SBW_2017.pdf'>Soybean Genetics Committee</a></td></tr>
             <tr><td>Kelly Whiting</td><td>Combining QT and Northern/Southern UT</td></tr>
             <tr><td>George Graef</td><td>Quality Traits</td></tr>
         </body>
@@ -130,12 +130,7 @@ sitemap: community/sbw
 </div>
 
 
-
-
-
-
-
-<h4>Tuesday, February, 14, 2017</h4>
+<h4>Tuesday, February 14, 2017</h4>
 <div class="uk-overflow-auto">
     <table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
         <thead>
@@ -155,65 +150,75 @@ sitemap: community/sbw
 
 
 
-<h3>Wednesday 02/15/2017</h3>
-<p>Continental Breakfast | 6:45 am - 8:00 am | Versailles Foyer</p>
-<p>Public-Private Southern Breeders’ Meeting, Zenglu Li | 7:00 am - 8:00 am | Alpine II room</p>
-<p>USB Composition Workshop, Kelly Whiting | 11:00 am - 5:40 pm | St. Moritz and Bern room</p>
+<h4>Wednesday, February 15, 2017</h4>
+<div class="uk-overflow-auto">
+    <table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+        </thead>
+        <body>
+            <tr><td>Zenglu Li</td><td>Public-Private Southern Breeders’ Meeting</td></tr>
+        </body>
+    </table>
+</div>
 
 
-<h3>Agenda for USB Composition Workshop</h3>
-<h3>February 15th and 16th, 2017 | St. Louis, MO | Sheraton Westport Chalet Hotel</h3>
+<h2>Agenda for USB Composition Workshop</h2>
+<h4>February 15th and 16th, 2017 | St. Louis, MO | Sheraton Westport Chalet Hotel</h4>
 <p>The 2017 USB Composition Workshop highlights current research on soybean seed composition and quality traits and includes presentations on the value and delivery of soybean quality traits to the market. The workshop will begin immediately after the Soybean Breeders’ Workshop and thus begin Wednesday February 15th at 11:00 am.  It will be in the St Moritz/Bern conference room of the Westport Sheraton Chalet Hotel.</p>
-<h3>Wednesday February 15th </h3>
+<hr > 
 
-<table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider">
-    <thead>
-        <tr>
-            <th class="uk-table-shrink">Start</th>
-            <th class="uk-table-shrink">End</th>
-            <th class="uk-table-expand">Speaker</th>
-            <th class="uk-table-expand">Topic</th>
-        </tr>
-    </thead>
+<h4>Wednesday, February 15, 2017</h4>
+<div class="uk-overflow-auto">
+    <table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+        </thead>
+        <body>
+            <tr><td>Kelly Whiting, USB staff</td><td>Welcome and Introduction to Session</td></tr>
+            <tr><td>Don Banks, Edible Oil Technology</td><td>Current and prospective opportunity for development of soybean oil for the saturated/solid fat and baking goods market</td></tr>
+            <tr><td>Jason Gillman, USDA-ARS Columbia Missouri</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Gillman_2017_final_report_soybean_breeders_workshop_Stearic_acid_project.pdf'>Final report of the USB Stearic Acid breeding and genetics project</a></td></tr>
+            <tr><td>Richard Galloway, Galloway and Associates</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Richard_Galloway_2-15-17.pdf'>Status and prospect of applying inter-esterification of soybean oil for the saturated/solid fat and baking goods market</a></td></tr>
+            <tr><td colspan='2'>Lunch (on your own)</td></tr>
+            <tr><td>Leah McHale, Ohio State University</td><td>USB Increased Oil Content project update</td></tr>
+            <tr><td>Rouf Mian, USDA-ARS Raleigh NC</td><td>USB Increased Protein Content and Amino Acids project update</td></tr>
+            <tr><td colspan='2'>Break</td></tr>
+            <tr><td>Katy Rainey, Purdue University</td><td><a href='https://data.soybase.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Rainey_carbohydrate_sources.pdf'>USB Carbohydrate Traits project update</a></td></tr>
+            <tr><td>Kristin Bilyeu, USDA-ARS Columbia, MO</td><td>USB High Oleic Breeding project update</td></tr>
+            <tr><td colspan='2'>Dinner for USB composition project researchers (only)</td></tr>
+        </body>
+    </table>
+</div>
 
-<tbody>
-    <tr><td>11:00am</td><td>11:05am</td><td>Kelly Whiting, USB staff</td><td>Welcome and Introduction to Session</td></tr>
-    <tr><td>11:05am</td><td>11:25am</td><td>Don Banks, Edible Oil Technology</td><td>Current and prospective opportunity for development of soybean oil for the saturated/solid fat and baking goods market</td></tr>
-    <tr><td>11:25am</td><td>11:45</td><td>Jason Gillman, USDA-ARS Columbia Missouri</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Gillman_2017_final_report_soybean_breeders_workshop_Stearic_acid_project.pdf'>Final report of the USB Stearic Acid breeding and genetics project</a></td></tr>
-    <tr><td>11:45am</td><td>12:00pm</td><td>Richard Galloway, Galloway and Associates</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Richard_Galloway_2-15-17.pdf'>Status and prospect of applying inter-esterification of soybean oil for the saturated/solid fat and baking goods market</a></td></tr>
-    <tr><td>12:00pm</td><td>1:20pm</td><td colspan='2'>Lunch (on your own)</td></tr>
-    <tr><td>1:20pm</td><td>2:20pm</td><td>Leah McHale, Ohio State University</td><td>USB Increased Oil Content project update</td></tr>
-    <tr><td>2:20pm</td><td>3:20pm</td><td>Rouf Mian, USDA-ARS Raleigh NC</td><td>USB Increased Protein Content and Amino Acids project update</td></tr>
-    <tr><td>3:20pm</td><td>3:40pm</td><td colspan='2'>Break</td></tr>
-    <tr><td>3:40pm</td><td>4:40pm</td><td>Katy Rainey, Purdue University</td> <a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Rainey_carbohydrate_sources.pdf'>USB Carbohydrate Traits project update</a></td></tr>
-    <tr><td>4:40pm</td><td>5:40pm</td><td>Kristin Bilyeu, USDA-ARS Columbia, MO</td><td>USB High Oleic Breeding project update</td></tr>
-    <tr><td>6:15pm</td><td colspan='3'>Dinner for USB composition project researchers (only) - Zermatt Room</td></tr>
-</tbody>
-</table>
-
-<h3>Thursday February 16th </h3>
-<table class="uk-table uk-table-small uk-table-hover uk-table-responsive uk-table-divider">
-    <thead>
-        <tr>
-            <th class="uk-table-expand">Start</th>
-            <th class="uk-table-expand">End</th>
-            <th class="uk-table-expand">Speaker</th>
-            <th class="uk-table-expand">Topic</th>
-        </tr>
-    </thead>
-    <tbody>
-    <tr><td>8:00am</td><td>8:05am</td><td>Kelly Whiting, USB staff</td><td>Welcome & Introduction to Session</td></tr>
-    <tr><td>8:05am</td><td>8:20am</td><td>Rich Joost, USB staff</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Joost_VTF_Objectives_pre.pdf'>USB Value Task Force Objectives</a></td></tr>
-    <tr><td>8:20am</td><td>8:40am</td><td>Gordon Denny, Gordon Denny LLC</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Seed_St_Louis_Feb162017_G_Denny.pdf'>Feedback from processors: specs., nutrient density, test weight </a></td></tr>
-    <tr><td>8:40am</td><td>9:05am</td><td>Reid Rice, DuPont-Pioneer</td><td>USB project with DuPont Pioneer to increase protein content, and high oleic update</td></tr>
-    <tr><td>9:05am</td><td>9:25am</td><td>Lanny Ashlock, Natural Soy and Grain Alliance, Arkansas</td><td>Marketing high protein varieties: the Arkansas model</td></tr>
-    <tr><td>9:25am</td><td>9:45am </td><td colspan='2'>Future of soybean variety development including quality traits at Bayer Crop Science</td></tr>
-    <tr><td>9:45am</td><td>10:05am</td><td colspan='2'>Break</td></tr>
-    <tr><td>10:05am</td><td>10:35am</td><td>Doug Allen, USDA-ARS, Danforth Plant Science Center, St Louis</td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Breeders_Workshop_2017b.pdf'>Feasibility of drawing carbon for additional protein and oil in soybean seed from soluble or insoluble (fiber) carbohydrates</a></td></tr>
-    <tr><td>10:35am</td><td>10:55am</td><td>John Schillinger, of Schillinger Genetics Inc.</td><td>Development of high oleic soybean varieties at Schillinger Genetics</td></tr>
-    <tr><td>10:55am</td><td>11:10am</td><td>Katy Rainey, Purdue University</td><td>Genetic sources of increased sugar content in soybean</td></tr>
-    <tr><td>11:10am</td><td>11:25am</td><td>Vince Pantalone, University of Tennessee</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Pantalone_2017_Amino_Acid_Genetic_Variation.pdf'>Genetic variation and quantification of amino acids in soybean seed</a></td></tr>
-    <tr><td>11:25am</td><td>11:45am</td><td>Nick Bajjalieh, Integrative Nutrition Inc., Decatur IL</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Bajjalieh_2.16.2017.pdf'>Capturing value of key amino acids of soybean</a></td></tr>
-    <tr><td>11:45am</td><td>12:00pm</td><td>Kelly Whiting, USB staff</td><td>Wrap-up</td></tr>
-</tbody>
-</table>
+<h4>Thursday, February 16, 2017</h4>
+<div class="uk-overflow-auto">
+    <table class="uk-table uk-table-small uk-table-hover uk-table-middle uk-table-divider">
+        <thead>
+            <tr>
+                <th class="uk-table-expand">Speaker</th>
+                <th class="uk-table-expand">Topic</th>
+            </tr>
+        </thead>
+        <body>
+            <tr><td>Kelly Whiting, USB staff</td><td>Welcome & Introduction to Session</td></tr>
+            <tr><td>Rich Joost, USB staff</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Joost_VTF_Objectives_pre.pdf'>USB Value Task Force Objectives</a></td></tr>
+            <tr><td>Gordon Denny, Gordon Denny LLC</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Seed_St_Louis_Feb162017_G_Denny.pdf'>Feedback from processors: specs., nutrient density, test weight </a></td></tr>
+            <tr><td>Reid Rice, DuPont-Pioneer</td><td>USB project with DuPont Pioneer to increase protein content, and high oleic update</td></tr>
+            <tr><td>Lanny Ashlock, Natural Soy and Grain Alliance, Arkansas</td><td>Marketing high protein varieties: the Arkansas model</td></tr>
+            <tr><td colspan='2'>Future of soybean variety development including quality traits at Bayer Crop Science</td></tr>
+            <tr><td colspan='2'>Break</td></tr>
+            <tr><td>Doug Allen, USDA-ARS, Danforth Plant Science Center, St Louis</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Breeders_Workshop_2017b.pdf'>Feasibility of drawing carbon for additional protein and oil in soybean seed from soluble or insoluble (fiber) carbohydrates</a></td></tr>
+            <tr><td>John Schillinger, of Schillinger Genetics Inc.</td><td>Development of high oleic soybean varieties at Schillinger Genetics</td></tr>
+            <tr><td>Katy Rainey, Purdue University</td><td>Genetic sources of increased sugar content in soybean</td></tr>
+            <tr><td>Vince Pantalone, University of Tennessee</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Pantalone_2017_Amino_Acid_Genetic_Variation.pdf'>Genetic variation and quantification of amino acids in soybean seed</a></td></tr>
+            <tr><td>Nick Bajjalieh, Integrative Nutrition Inc., Decatur IL</td><td><a href='https://data.legumeinfo.org/annex/Glycine/max/meetings/soybean_breeders_workshop/SBW_2017/Bajjalieh_2.16.2017.pdf'>Capturing value of key amino acids of soybean</a></td></tr>
+            <tr><td>Kelly Whiting, USB staff</td><td>Wrap-up</td></tr>
+        </body>
+    </table>
+</div>
